force-app/main/default/objects/onemergefree__MergeRuleField__mdt/onemergefree__MergeRuleField__mdt.object-meta.xml
<CustomObject>
    <description>A Field merged as part of Merge Rule.</description>
    <label>Merge Rule Field</label>
    <pluralLabel>Merge Rule Fields</pluralLabel>
</CustomObject>