force-app/main/default/objects/onemergefree__MergeRuleField__mdt/fields/onemergefree__FieldName__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__FieldName__c</fullName>
    <description>The API Name of the referenced field e.g. BillingStreet.</description>
    <inlineHelpText>The API Name of the referenced field e.g. BillingStreet.</inlineHelpText>
    <label>Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>