force-app/main/default/objects/onemergefree__MergeRuleField__mdt/fields/onemergefree__IsPriority__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Field is used for Priority Ordering.</description>
    <inlineHelpText>Indicates that the Field is used for Priority Ordering.</inlineHelpText>
    <label>Is Priority?</label>
    <type>Checkbox</type>
</CustomField>