force-app/main/default/objects/onemergefree__MergeRuleField__mdt/fields/onemergefree__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then Source Records must have a true field value in order to be valid for merge processing.</description>
    <inlineHelpText>If TRUE, then Source Records must have a true field value in order to be valid for merge processing.</inlineHelpText>
    <label>Is Required?</label>
    <type>Checkbox</type>
</CustomField>