force-app/main/default/objects/onemergefree__MergeRuleField__mdt/fields/onemergefree__IsSecondaryPriority__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsSecondaryPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Field is used for Secondary Priority Ordering.</description>
    <inlineHelpText>Indicates that the Field is used for Secondary Priority Ordering.</inlineHelpText>
    <label>Is Secondary Priority?</label>
    <type>Checkbox</type>
</CustomField>