force-app/main/default/objects/onemergefree__MergeRuleField__mdt/fields/onemergefree__IsSkipped__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsSkipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Field is skipped and not merged. Used for fields that define priority only.</description>
    <inlineHelpText>Indicates that the Field is skipped and not merged. Used for fields that define priority only.</inlineHelpText>
    <label>Is Skipped?</label>
    <type>Checkbox</type>
</CustomField>