force-app/main/default/objects/onemergefree__MergeRuleField__mdt/fields/onemergefree__MergeRule__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeRule__c</fullName>
    <description>The parent Merge Rule.</description>
    <inlineHelpText>The parent Merge Rule.</inlineHelpText>
    <label>Merge Rule</label>
    <referenceTo>onemergefree__MergeRule__mdt</referenceTo>
    <relationshipLabel>Merge Rule Fields</relationshipLabel>
    <relationshipName>MergeRuleFields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>