force-app/main/default/objects/onemergefree__MergeRuleField__mdt/validationRules/onemergefree__Priority_Field_Equivalence.validationRule-meta.xml
<ValidationRule>
    <fullName>onemergefree__Priority_Field_Equivalence</fullName>
    <active>true</active>
    <description>The same field cannot be set as Is Priority and Is Secondary Priority.</description>
    <errorConditionFormula>AND(
 onemergefree__IsPriority__c,
 onemergefree__IsSecondaryPriority__c
)</errorConditionFormula>
    <errorMessage>The same field cannot be set as Is Priority and Is Secondary Priority.</errorMessage>
</ValidationRule>